Prevent text overflow on blueprint field labels (#2673)

--- a/resources/sass/components/blueprints.scss
+++ b/resources/sass/components/blueprints.scss
@@ -15,6 +15,7 @@
 }
 
 .blueprint-drag-handle {
+    @apply flex-none;
     cursor: move;
     background: rgba(black, 0.01) url('../img/drag-dots.svg') 50% 50% no-repeat;
 }
